# gart-wasm

./: Cargo.toml
src/: wasm_vm.rs
