[package]
name = "gart-wasm"
version = "0.1.0"
edition = "2024"


[lib] 
crate-type = ["cdylib"]

[dependencies]
gart = { git = "https://github.com/Pybounce/gart" }
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
rand = { version = "0.9", features = ["os_rng"] } 
getrandom = { version = "0.3", features = ["wasm_js"] }
